@startuml Diagrama de Clases Pregunta
skinparam classAttributeIconSize 0

abstract class Pregunta {
    # tipoPregunta: String
    # enunciado: String
    # opciones: List<String>
    # respuestaCorrecta: Respuesta
    # respuestaCorrectaFormateada: String
    + responder(respuestasUsuario: List<Respuesta>): List<Integer>
    + tipoPregunta: String
    + getEnunciado(): String
    + getOpciones(): List<String>
    + permiteMultiplicadores(): boolean
    + permiteExclusividad(): boolean
    + respuestaIncorrecta(): Respuesta
    + respuestaCorrecta(): String
}

class PreguntaVerdaderoFalso {
    + {static} Penalidad(enunciado: String, respuestaCorrecta: boolean)
    + {static} Clasico(enunciado: String, respuestaCorrecta: boolean)
}

class PreguntaGroupChoice {
    - parsearRespuesta(valoresGrupoA: Set<Integer>, valoresGrupoB: Set<Integer>): String
    - listaOpciones(valoresGrupo: Set<Integer>): List<String>
    + PreguntaGroupChoice(enunciado: String, opciones: List<String>, opcionesGrupoA: Set<Integer>, opcionesGrupoB: Set<Integer>)
}

class PreguntaOrderedChoice {
    - parsearRespuesta(ordenCorrecto: List<Integer>): String
    + PreguntaOrderedChoice(enunciado: String, opciones: List<String>, ordenCorrecto: List<Integer>)
}

class PreguntaMultipleChoice {
    - parsearRespuesta(opcionesCorrectas: Set<Integer>): String
    + {static} Parcial(enunciado: String, opciones: List<String>, opcionesCorrectas: Set<Integer>)
    + {static} Penalidad(enunciado: String, opciones: List<String>, opcionesCorrectas: Set<Integer>)
    + {static} Clasico(enunciado: String, opciones: List<String>, opcionesCorrectas: Set<Integer>)
}

'Ordenamiento De Cuadrados

'Herencia --|> cumple la relación 'es un'
Pregunta <|-up- PreguntaGroupChoice
Pregunta <|-left- PreguntaMultipleChoice
Pregunta <|-down- PreguntaOrderedChoice
Pregunta <|-right- PreguntaVerdaderoFalso

'Asociacion --> un objeto guarda a otro

'Agregacion --o un objeto esta compuesto por otro pero no lo necesita para vivir

'Composicion --* un objeto es dueño de otro

'Dependencia ..> un objeto utiliza a otro porque lo recibe/devuelve

'Interfaces ..|> colección de declaraciones de métodos sin implemetnar


@enduml